[project]
name = "bright_mind"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "huutawn", email = "huutankg2005@gmail.com"},
]
dependencies = [
    "alembic==1.16.5",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "bcrypt==4.0.1",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "colorama==0.4.6",
    "contextvars==2.4",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "email-validator==2.3.0",
    "Faker==37.8.0",
    "fastapi==0.117.1",
    "fastapi-cli==0.0.13",
    "fastapi-cloud-cli==0.2.1",
    "FastAPI-SQLAlchemy==0.2.1",
    "greenlet==3.2.4",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "immutables==0.21",
    "importlib-metadata==8.7.0",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "Mako==1.3.10",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "minio==7.2.17",
    "numpy==2.2.6",
    "locust",
    "orjson==3.11.3",
    "packaging==25.0",
    "pandas==2.3.2",
    "passlib==1.7.4",
    "payos==0.1.8",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.10",
    "py==1.11.0",
    "pycparser==2.23",
    "pycryptodome==3.23.0",
    "pydantic==2.11.9",
    "pydantic-extra-types==2.10.5",
    "pydantic-settings==2.10.1",
    "pydantic-core==2.33.2",
    "Pygments==2.19.2",
    "PyJWT==2.10.1",
    "pyparsing==3.2.5",
    "pytest==8.4.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-editor==1.0.4",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "redis==6.4.0",
    "requests==2.32.5",
    "rich==14.1.0",
    "rich-toolkit==0.15.1",
    "rignore==0.6.4",
    "sentry-sdk==2.39.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.43",
    "starlette==0.48.0",
    "text-unidecode==1.3",
    "toml==0.10.2",
    "typer==0.19.2",
    "typing-inspection==0.4.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "ujson==5.11.0",
    "urllib3==2.5.0",
    "uvicorn==0.36.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "zipp==3.23.0",
    "openpyxl>=3.1.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
